bin_PROGRAMS = ch-utils-test-list ch-utils-test-q ch-utils-test-msgq ch-utils-test-hm ch-utils-test-lru
ch_utils_test_list_SOURCES = list_test.c
ch_utils_test_q_SOURCES = q_test.c
ch_utils_test_msgq_SOURCES = msgq_test.c
ch_utils_test_hm_SOURCES = hashmap_test.c
ch_utils_test_lru_SOURCES = lru_test.c
ACLOCAL_AMFLAGS = -I m4
