AM_CPPFLAGS = -Ich-utils
lib_LTLIBRARIES = libch-utils.la
libch_utils_la_SOURCES = hashmap.c  hashmap_private.c hashmap_private_cbks.c  list.c list_private.c  msgq.c  q.c  sock_utils.c  task.c gentree_private.h  hashmap_private.h hashmap_private_cbks.h  list_private.h  msgq_private.h  q_private.h  sock_utils_private.h  task_private.h
libch_utils_adir = $(includedir)/ch-utils
nobase_include_HEADERS = ch-utils/exp_hashmap.h  ch-utils/exp_list.h  ch-utils/exp_msgq.h  ch-utils/exp_q.h  ch-utils/exp_sock_utils.h  ch-utils/exp_task.h
